<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar_layout" android:id="@+id/main_activity_toolbar"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_toolbar"
        app:tabIndicatorColor="@color/tabIndicatorColor"
        app:tabIndicatorHeight="5dp"
        app:tabTextAppearance="@style/TabLayoutTextStyle">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/users" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/history" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/activity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/activity" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="409dp"
        android:layout_height="555dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout" >

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addBill"
        android:layout_width="78dp"
        android:layout_height="66dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />


</androidx.constraintlayout.widget.ConstraintLayout>