<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/graph"
        android:layout_width="wrap_content"
        android:layout_height="120pt"
        app:cardBackgroundColor="#FAFAFA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <lecho.lib.hellocharts.view.PieChartView
            android:id="@+id/chart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tags"
        android:layout_width="398dp"
        android:layout_height="171dp"
        android:layout_marginTop="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:cardBackgroundColor="#8B868585"
        app:layout_constraintEnd_toEndOf="@+id/graph"
        app:layout_constraintStart_toStartOf="@+id/graph"
        app:layout_constraintTop_toBottomOf="@+id/graph">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#194AD1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/food"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="75 RS"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#F44336"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/shopping"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="75 RS"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#4CAF50"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/movies"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/movies"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="75 RS"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#FF00FF"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    android:text="@string/others"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="75 RS"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>